objects/Price_List_Record__c/Price_List_Record__c.object-meta.xml
<CustomObject>
    <label>Price List Record</label>
    <nameField>
        <label>Price List Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price List Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>