objects/Price_List_Record__c/fields/Density__c.field-meta.xml
<CustomField>
    <fullName>Density__c</fullName>
    <label>Density</label>
    <length>30</length>
    <type>Text</type>
</CustomField>