objects/Price_List_Record__c/fields/Past_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Past_Revenue__c</fullName>
    <label>Past Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>