objects/Price_List_Record__c/fields/Price_List__c.field-meta.xml
<CustomField>
    <fullName>Price_List__c</fullName>
    <label>Price Book</label>
    <referenceTo>Price_List__c</referenceTo>
    <relationshipLabel>Price List Records</relationshipLabel>
    <relationshipName>Price_List_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>