objects/Price_List_Record__c/fields/Product2Id__c.field-meta.xml
<CustomField>
    <fullName>Product2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product2Id</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Price List Records</relationshipLabel>
    <relationshipName>Price_List_Records</relationshipName>
    <type>Lookup</type>
</CustomField>