objects/Price_List_Record__c/fields/Product_Adj_Amt__c.field-meta.xml
<CustomField>
    <fullName>Product_Adj_Amt__c</fullName>
    <label>Product Adj Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>